fix: dev: PUT and POST fixes
